assets/css/screen.css
/* ... */
.section-title span {
    border-bottom: 1px solid rgba(0, 0, 0, .44);
    display: inline-block;
    padding-bottom: 20px;
    margin-bottom: -1px;
}

.article-post ol,
.article-post ul {
    margin-bottom: 1.5rem;
}

.article-post ol ol,
.article-post ul ul {
    list-style: disc;
    margin-bottom: 0rem;
}

@media (min-width:576px) {
    .card-columns.listfeaturedtag {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
}

@media (min-width:992px) {
    .navbar-expand-lg .navbar-nav .nav-link {
        padding-right: 0.8rem;
        padding-left: 0.8rem;
    }
}

.listfeaturedtag {
    border: 1px solid rgba(0, 0, 0, .125);
    border-radius: .25rem;
    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
}

.listfeaturedtag .wrapthumbnail {
    height: 290px;
    flex: 0 0 auto;
    height: 100%;
}

.maxthumb {
    max-height: 300px;
    overflow: hidden;
}

.maxthumb2 {
    max-height: 300px;
    overflow: hidden;
    background-position: center center;
    background-repeat: no-repeat;
    overflow: hidden;
    background-size: cover;
}

figure.figleft {
    float: left;
    margin-right: 30px;
    margin-left: -100px;
}

figure.figright {
    float: right;
    margin-left: 30px;
    margin-right: -100px;
}

figure.figcenter {
    display:block;
}

figure.figcenter img.large {
    width: 100%;
}

figure.figcenter img {
    margin-right: auto;
    margin-left: auto;
    display: block;
}

figcaption {
    display: block;
    font-size: 16px;
    color: rgba(117, 117, 117, 1);
    text-align: center;
}

.listfeaturedtag .card,
.card-footer {
    border: 0;
}

.listfeaturedtag .thumbnail {
    background-size: cover;
    height: 100%;
    display: block;
    background-position: 38% 22% !important;
    background-origin: border-box !important;
    border-top-left-radius: .25rem;
    border-bottom-left-radius: .25rem;
}

.listfeaturedtag .card-block {
    padding-left: 0;
}

.listfeaturedtag h2.card-title,
.listrecent h2.card-title {
    font-size: 1.3rem;
    font-weight: 700;
    line-height: 1.25;
}

.listfeaturedtag h4.card-text,
.listrecent h4.card-text {
    color: rgba(0, 0, 0, .44);
    font-size: 0.95rem;
    line-height: 1.6;
    font-weight: 400;
}

.featured-box-img-cover {
    object-fit: cover;
    width: 100%;
    height: 100%;
    max-height: 100%;
}

@media (max-width:991px) {
    .featured-box-img-cover {
        height: auto;
        width: 100%;
    }
}

.wrapfooter {
    font-size: .8rem;
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

.author-thumb {
    width: 40px;
    height: 40px;
    margin-right: 13px;
    border-radius: 100%;
}

.post-top-meta {
    margin-bottom: 2rem;
}

.post-top-meta .author-thumb {
    width: 72px;
    height: 72px;
}

.post-top-meta.authorpage .author-thumb {
    margin-top: 40px;
}

.post-top-meta span {
    font-size: 0.9rem;
    color: rgba(0, 0, 0, .44);
    display: inline-block;
}

.post-top-meta .author-description {
    margin-bottom: 5px;
    margin-top: 5px;
    font-size: 0.95rem;
}

.toc ul {
    list-style: decimal;
    font-weight: 400;
}

.author-meta {
    flex: 1 1 auto;
    white-space: nowrap !important;
    text-overflow: ellipsis !important;
    overflow: hidden !important;
}

span.post-name,
span.post-date,
span.author-meta {
    display: inline-block;
}

span.post-date,
span.post-read {
    color: rgba(0, 0, 0, .44);
}

span.post-read-more {
    align-items: center;
    display: inline-block;
    float: right;
    margin-top: 8px;
}

span.post-read-more a {
    color: rgba(0, 0, 0, .44);
}

span.post-name a,
span.post-read-more a:hover {
    color: rgba(0, 0, 0, .8);
}

.dot:after {
    content: "·";
    margin-left: 3px;
    margin-right: 3px;
}

.mediumnavigation .form-control {
    font-size: 0.8rem;
    border-radius: 30px;
    overflow: hidden;
    border: 1px solid rgba(0, 0, 0, 0.09);
    min-width: 180px;
}

.mediumnavigation .form-inline {
    margin-left: 15px;
}

.mediumnavigation .form-inline .btn {
    margin-left: -50px;
    border: 0;
    border-radius: 30px;
    cursor: pointer;
}

.mediumnavigation .form-inline .btn:hover,
.mediumnavigation .form-inline .btn:active {
    background: transparent;
    color: green;
}

.mediumnavigation .navbar-brand {
    font-weight: 500;
}

.mediumnavigation .dropdown-menu {
    border: 1px solid rgba(0, 0, 0, 0.08);
    margin: .5rem 0 0;
}

.mediumnavigation .nav-item,
.dropdown-menu {
    font-size: 0.9rem;
}

.mediumnavigation .search-icon {
    margin-left: -40px;
    display: inline-block;
    margin-top: 3px;
    cursor: pointer;
}

.mediumnavigation .navbar-brand img {
    max-height: 30px;
    margin-right: 5px;
}

/*font-style: bold;
//font-weight: 800;
    font-family: Righteous; */

.mainheading h1.sitetitle {
    font-family: Merriweather;
    font-style: bolder;
}


.mainheading h1.posttitle {
    font-weight: 700;
    margin-bottom: 1rem;
}

.mainheading h2.postsubtitle {
    margin-bottom: 1rem;
    font-size: 24px;
    font-weight: 300;
    color: rgba(117, 117, 117, 1);
}

.footer {
    border-top: 1px solid rgba(0, 0, 0, .05) !important;
    padding-top: 15px;
    padding-bottom: 12px;
    font-size: 0.8rem;
    color: rgba(0, 0, 0, .44);
    margin-top: 50px;
    margin-bottom: 62px;
    position: relative;
    background: #fff;
}

.link-dark {
    color: rgba(0, 0, 0, .8);
}

.article-post {
    font-family: Merriweather;
    font-size: 1.1rem;
    line-height: 1.84;
    color: rgba(0, 0, 0, .8);
}

blockquote {
    border-left: 4px solid #00ab6b;
    padding: 0 20px;
    font-style: italic;
    color: rgba(0, 0, 0, .5);
}

.article-post p,
.article-post blockquote {
    margin: 0 0 1.5rem 0;
}

.featured-image {
    display: block;
    margin-bottom: 1.5rem;
}

.share {
    text-align: center;
}

.share p {
    margin-bottom: 10px;
    font-size: 0.95rem;
}

.share ul li {
    display: inline-block;
    margin-bottom: 9px;
}
/* ... */

